--- a/views/result.ejs
+++ b/views/result.ejs
@@ -28,10 +28,12 @@
           <a href="#top" type="button" class="btn btn-warning border_right"
             >Back TO Top</a
           >
-
           <a href="#aTag" type="button" class="btn btn-primary">&lt;a&gt;</a>
           <a href="#pTag" type="button" class="btn btn-primary border_left"
             >&lt;p&gt;</a
+          >
+          <a href="#metaTag" type="button" class="btn btn-primary border_left"
+            >&lt;meta&gt;</a
           >
           <a href="#imgTag" type="button" class="btn btn-primary border_left"
             >&lt;img&gt;</a
